--- a/proyecto-Clopix/.env
+++ b/proyecto-Clopix/.env
@@ -1,6 +1,6 @@
 DB_USERNAME= root
-DB_PASSWORD=
+DB_PASSWORD= null
 DB_HOST= localhost
-DB_DATABASE= el nombre de la base de datos
-DB_PORT=3306
+DB_DATABASE= clopix_db
+DB_PORT= 
 DB_DIALECT=mysql
